# Efolio-A--LP

./: README.md  executa-loja.sh
Java/carrinho-compras/: pom.xml
Java/carrinho-compras/src/main/java/pt/mago/loja/: Cart.java  Cliente.java  Item.java  Main.java  Produto.java  Store.java
Java/carrinho-compras/src/main/java/pt/mago/loja/integracao/: ExecutaOcaml.java  ExecutaOcamlLoja.java
Java/carrinho-compras/src/test/java/pt/mago/loja/: AppTest.java
Ocaml/precos/: dune-project  precos.opam  store.pl
Ocaml/precos/lib/: dune
Ocaml/precos/test/: dune
